--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -22,7 +22,7 @@
             <tr>
                 <td class="text-left">@l.Product.ProductName</td>
                 <td class="text-center">@l.Quantity</td>
-                <td class="text-right">$25</td>
+                <td class="text-right">@l.Product.ProductPrice</td>
                 <td class="text-right">@((l.Quantity * l.Product.ProductPrice).ToString("c"))</td>
                 <td class="text-center">
                     <form asp-page-handler="Remove" method="post">
