--- a/Pages/_CartLayout.cshtml
+++ b/Pages/_CartLayout.cshtml
@@ -14,7 +14,7 @@
 
     <body>
         <div class="bg-dark text-white p-2">
-            <span class="navbar-brand m-lg-2">The Water Project</span>
+            <span class="navbar-brand m-lg-2">INTEX II</span>
         </div>
         <div class="m-1 p-1">
             <main role="main" class="pb-3">
