--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,16 +1,1 @@
-﻿@using INTEX_II_413.Models.ViewModels
-@{
-    ViewData["Title"] = "Home Page";
-}
-
-@model ProductsListViewModel
-
-<h1>INTEX II</h1>
-@foreach (Product p in Model.Products)
-{
-    <partial name="ProductSummary" model="@p" />
-}
-
-<div page-model="@Model.PaginationInfo" page-action="Index"
-     page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
-     class="btn-group pull-right m-1"></div>
+﻿<h1>INTEX II</h1>
