--- a/Views/Home/LogIn.cshtml
+++ b/Views/Home/LogIn.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-<h1>Log In!</h1><br /><br />
+<h1 style="text-align:center">Log In</h1><br />
 
 <div class="container text-center text-black col-md-6" style="background-color: white; padding-top: 30px; padding-bottom: 30px; border: 2px solid black; width: 300px;">
     <form>
