--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -1,6 +1,14 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using INTEX_II_413.Models.ViewModels
+
+@model ProductsListViewModel
+
 <h1>Here is where we'll show a full list of products</h1>
+
+@foreach (Product p in Model.Products)
+{
+    <partial name="ProductSummary" model="@p" />
+}
+
+<div page-model="@Model.PaginationInfo" page-action="Index"
+     page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
+     class="btn-group pull-right m-1"></div>
