--- a/Views/Home/SingleProduct.cshtml
+++ b/Views/Home/SingleProduct.cshtml
@@ -1,1 +1,25 @@
-﻿
+﻿@model Product
+
+<div class="col-md-6">
+    <div class="card m-1 p-1">
+        <h4>
+            @Model.Name
+            <span class="badge rounded-pill bg-primary text-white float-end"><small>$@Model.Price</small></span>
+        </h4>
+        <a href="@Model.ImgLink">
+            <img src="@Model.ImgLink" style="max-width: 400px; height: auto;">
+        </a>
+        <ul>
+            <li>Number of Parts: @Model.NumParts</li>
+            <li>Made in @Model.Year</li>
+            <li>@Model.Category</li>
+            <li>@Model.Description</li>
+        </ul>
+
+        <form id="@Model.ProductId" method="post" asp-page="/Cart">
+            <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
+        </form>
+    </div>
+</div>
