--- a/Views/Home/LogIn.cshtml
+++ b/Views/Home/LogIn.cshtml
@@ -1,31 +1,26 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model INTEX_II_413.Models.Customer
+
 <h1 style="text-align:center">Log In</h1><br />
 
 <div class="container text-center text-black col-md-6" style="background-color: white; padding-top: 30px; padding-bottom: 30px; border: 2px solid black; width: 300px;">
-    <form>
-        <fieldset>
-            <label for="txtUser">Username:</label>
-            <input type="text" id="txtUser" name="username">
-            <br>
-            <br>
-            <label for="txtPass">Password: </label>
-            <input type="password" id="txtPass" name="password">
+    <form asp-page="/Cart" method="post">
+        
+        <label asp-for="UserName">Username:</label>
+        <input asp-for="UserName" type="string" ><br /><br />
 
-            <div class="text-center mt-4">
-                <button class="btn btn-large btn-outline-dark">Sign In</button>
-            </div>
-        </fieldset>
+        <label asp-for="Password">Password: </label>
+        <input asp-for="Password" type="password" ><br /><br />
+
+        <button type="submit" style="width: 150px;">Sign In</button>
     </form>
-</div><br>
 
-<form>
-    <div class="container d-flex align-items-center flex-column">
-        <p style="font-size: 30px">No Account? Sign Up Today!</p>
-        <br>
-        <button style="background-color: white;" class="btn btn-xl btn-outline-dark">Create Account</button>
-    </div>
-</form>
+</div>
+
+
+<div class="container d-flex align-items-center flex-column">
+    <p style="font-size: 30px">No Account? Sign Up Today!</p>
+    <br>
+    <form asp-controller="Home" asp-action="CreateAccount" method="post">
+        <button type="submit" style="width: 150px;">Create Account</button>
+    </form>
+</div>
