--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -9,6 +9,7 @@
     <partial name="ProductSummary" model="@p" />
 }
 
-<div page-model="@Model.PaginationInfo" page-action="Index"
-     page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
-     class="btn-group pull-right m-1"></div>
+<div page-model="@Model.PaginationInfo" page-action="Products"
+      page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
+      class="btn-group pull-right m-1">
+</div>
