--- a/Views/Home/SingleProduct.cshtml
+++ b/Views/Home/SingleProduct.cshtml
@@ -15,10 +15,12 @@
             <li>@Model.Category</li>
             <li>@Model.Description</li>
         </ul>
-
+        <div>
+            <a class="btn btn-primary" href="@ViewBag.returnUrl">Continue Shopping</a>
+        </div>
         <form id="@Model.ProductId" method="post" asp-page="/Cart">
             <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
-            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
             <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
         </form>
     </div>
