--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -3,11 +3,12 @@
 @model ProductsListViewModel
 
 <h1>Here is where we'll show a full list of products</h1>
-
-@foreach (Product p in Model.Products)
-{
-    <partial name="ProductSummary" model="@p" />
-}
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    @foreach (Product p in Model.Products)
+    {
+        <partial name="ProductSummary" model="@p" />
+    }
+</div>
 
 <div page-model="@Model.PaginationInfo" page-action="Products"
       page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
