--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -6,25 +6,28 @@
     <!-- Adjust the column size as needed -->
     <div class="col">
         <div class="card shadow-sm">
-            <img src="@Model.ImgLink" class="bd-placeholder-img card-img-top" style="max-width: 400px; height: auto;">
+            <h4>
+                @Model.Name
+                <span class="badge rounded-pill bg-primary text-white float-end"><small>$@Model.Price</small></span>
+            </h4>
+            <img src="@Model.ImgLink" class="bd-placeholder-img card-img-top" style="max-width: auto; height: 500px;">
             <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                        @*<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>*@
+                        <form asp-controller="Home" asp-action="SingleProduct" asp-route-returnUrl="@ViewContext.HttpContext.Request.PathAndQuery()" method="post">
+                            <button type="submit" name="id" value="@Model.ProductId" style="width: 150px;">See More Info</button>
+                        </form><br /><br />
                         <form id="@Model.ProductId" method="post" asp-page="/Cart">
-                            <input type="hidden" asp-for="ProductId" />
+                            <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
                             <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
                             <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
                         </form>
-                    </div>
-                    <small class="text-body-secondary">$@Model.Price</small>
                 </div>
             </div>
         </div>
     </div>
-    @*<div class="card m-1 p-1">
+
+
+    @* <div class="col-md-6">
         <h4>
             @Model.Name
             <span class="badge rounded-pill bg-primary text-white float-end"><small>$@Model.Price</small></span>
@@ -41,7 +44,8 @@
             <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
             <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
         </form>
-    </div>*@
+    </div> *@
+
 </div>
 
 
