checkout page completed

--- a/Views/Admin/AdminCustomers.cshtml
+++ b/Views/Admin/AdminCustomers.cshtml
@@ -1,4 +1,6 @@
-﻿<h1>Admin Table for Customers</h1>
+﻿
+
+<h1>Admin Table for Customers</h1>
 
 <table class="table table-bordered table-striped">
 
@@ -11,10 +13,7 @@
             <th style="text-align:center" class="bg-black text-white">Country</th>
             <th style="text-align:center" class="bg-black text-white">Gender</th>
             <th style="text-align:center" class="bg-black text-white">Age</th>
-            <th style="text-align:center" class="bg-black text-white">Email</th>
-            <th style="text-align:center" class="bg-black text-white">UserName</th>
-            <th style="text-align:center" class="bg-black text-white">Password</th>
-            <th style="text-align:center" class="bg-black text-white">IsAdmin</th>
+
             <th style="text-align:center" class="bg-black text-white">Edit</th>
             <th style="text-align:center" class="bg-black text-white">Delete</th>
         </tr>
@@ -31,13 +30,9 @@
                 <td style="text-align:center">@x.Country</td>
                 <td style="text-align:center">@x.Gender</td>
                 <td style="text-align:center">@x.Age</td>
-                <td style="text-align:center">@x.Email</td>
-                <td style="text-align:center">@x.UserName</td>
-                <td style="text-align:center">@x.Password</td>
-                <td style="text-align:center">@x.IsAdmin</td>
 
-                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId">Edit</a></td>
-                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId">Delete</a></td>
+                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.CustomerId">Edit</a></td>
+                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.CustomerId">Delete</a></td>
             </tr>
         }
     </tbody>
