--- a/Views/Home/NewUser.cshtml
+++ b/Views/Home/NewUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@model INTEX_II_413.Models.Customer
-
+<h1>Tell Us About Yourself</h1>
 <div class="container text-center text-black col-md-6" style="background-color: white; padding-top: 30px; padding-bottom: 30px; border: 2px solid black; width: 300px;">
     <form asp-controller="Home" asp-action="TEMPORARY" method="post">
         <label asp-for="FirstName"> First Name:</label>
@@ -19,16 +19,6 @@
 
         <label asp-for="Age">Age:</label>
         <input asp-for="Age" type="number" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br />
-
-        <label asp-for="Email">Email:</label>
-        <input asp-for="Email" type="email" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br />
-
-        <label asp-for="UserName">UserName:</label>
-        <input asp-for="UserName" type="text" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br />
-
-        <label asp-for="Password">Password:</label>
-        <input asp-for="Password" type="password" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
-
 
         <button type="submit" style="background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin: auto; display: block;">Submit</button>
     </form>
