--- a/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -22,7 +22,6 @@
         </li>
         <li>
             <p>Scan the QR Code or enter this key <kbd>@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
-            <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Model.AuthenticatorUri"></div>
         </li>
@@ -48,16 +47,12 @@
     </ol>
 </div>
 
+
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-    <script src="~/lib/qrcode/qrcode.min.js"></script>
-    <script type="text/javascript">
-        new QRCode(document.getElementById("qrCode"),
-            {
-                text: "@Html.Raw(Model.AuthenticatorUri)",
-                width: 400,
-                height: 400
-            });
-    </script>
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+
+    <script type="text/javascript" src="~/lib/qrcode/qrcode.js"></script>
+    <script type="text/javascript" src="~/js/qr.js"></script>
 }
+
 
