--- a/Views/Admin/AddProduct.cshtml
+++ b/Views/Admin/AddProduct.cshtml
@@ -2,8 +2,6 @@
 <h1 style="text-align:center">Add a new product to the list!</h1><br /><br />
 
 
-
-
 <form asp-action="AddProduct" method="post" style="max-width: 400px; margin: auto;">
     <input asp-for="ProductId" type="hidden" />
 
@@ -28,11 +26,11 @@
     <label asp-for="ImgLink">ImgLink:</label>
     <input asp-for="ImgLink" type="text" style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
-    <label asp-for="PrimaryColor">Copied To Plex:</label>
+    <label asp-for="PrimaryColor">PrimaryColor:</label>
     <input asp-for="PrimaryColor" type="text" style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
 
-    <label asp-for="SecondaryColor">Notes:</label>
+    <label asp-for="SecondaryColor">SecondaryColor:</label>
     <input asp-for="SecondaryColor" type="text" style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
     <button type="submit" style="background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin: auto; display: block;">Submit</button>
