--- a/Views/Admin/AdminProducts.cshtml
+++ b/Views/Admin/AdminProducts.cshtml
@@ -1,7 +1,7 @@
 ﻿<h1 class="text-center">Table of All Products</h1>
 
 <div style="text-align:right">
-    <form asp-controller="Home" asp-action="AdminAddProduct" method="post">
+    <form asp-controller="Admin" asp-action="AdminAddProduct" method="post">
         <button type="submit" style="width: 150px;">Add Product</button>
     </form>
 </div>
