Removed Admin Controller and gave full CRUD functionality to Products

--- a/Views/Home/AdminHomepage.cshtml
+++ b/Views/Home/AdminHomepage.cshtml
@@ -10,7 +10,7 @@
                         <img src="~/img/orders.png" class="img-fluid" style="width: 350px; height: 250px;" />
                     </div>
                     <p class="card-text">Click the button below to view orders.</p>
-                    <a asp-controller="Admin" asp-action="AdminOrders" class="btn btn-primary mx-auto d-block">View Orders</a>
+                    <a asp-controller="Home" asp-action="AdminOrders" class="btn btn-primary mx-auto d-block">View Orders</a>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@
                         <img src="~/img/customer.png" class="img-fluid" style="width: 350px; height: 250px;" />
                     </div>
                     <p class="card-text">Click the button below to view customers.</p>
-                    <a asp-controller="Admin" asp-action="AdminCustomers" class="btn btn-primary mx-auto d-block">View Customers</a>
+                    <a asp-controller="Home" asp-action="AdminCustomers" class="btn btn-primary mx-auto d-block">View Customers</a>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
                         <img src="~/img/lego.png"  class="img-fluid" style="width: 350px; height: 250px;" />
                     </div>
                     <p class="card-text">Click the button below to view products.</p>
-                    <a asp-controller="Admin" asp-action="AdminProducts" class="btn btn-primary mx-auto d-block">View Products</a>
+                    <a asp-controller="Home" asp-action="AdminProducts" class="btn btn-primary mx-auto d-block">View Products</a>
                 </div>
             </div>
         </div>
