--- a/Views/Home/AdminOrders.cshtml
+++ b/Views/Home/AdminOrders.cshtml
@@ -40,8 +40,8 @@
                 <td style="text-align:center">@x.Bank</td>
                 <td style="text-align:center">@x.Fraud</td>
 
-                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId">Edit</a></td>
-                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId">Delete</a></td>
+                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.TransactionId">Edit</a></td>
+                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.TransactionId">Delete</a></td>
             </tr>
         }
     </tbody>
