--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="FraudConfirmation">Fraud</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Admin" asp-action="AdminHomepage">AdminHomepage</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="AdminHomepage">AdminHomepage</a>
                         </li>
                     </ul>
 
