--- a/Views/Home/AdminProducts.cshtml
+++ b/Views/Home/AdminProducts.cshtml
@@ -1,7 +1,7 @@
 ﻿<h1 class="text-center">Table of All Products</h1>
 
 <div style="text-align:right">
-    <form asp-controller="Admin" asp-action="AdminAddProduct" method="post">
+    <form asp-controller="Home" asp-action="AdminAddProduct" method="post">
         <button type="submit" style="width: 150px;">Add Product</button>
     </form>
 </div>
@@ -51,8 +51,8 @@
                 <td style="text-align:center">@x.PrimaryColor</td>
                 <td style="text-align:center">@x.SecondaryColor</td>
 
-                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditCustomer" asp-route-id="@x.ProductId">Edit</a></td>
-                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteCustomer" asp-route-id="@x.ProductId">Delete</a></td>
+                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId">Edit</a></td>
+                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId">Delete</a></td>
             </tr>
         }
     </tbody>
