--- a/Views/Home/LogIn.cshtml
+++ b/Views/Home/LogIn.cshtml
@@ -5,11 +5,11 @@
 <div class="container text-center text-black col-md-6" style="background-color: white; padding-top: 30px; padding-bottom: 30px; border: 2px solid black; width: 300px;">
     <form asp-page="/Cart" method="post">
         
-        <label asp-for="UserName">Username:</label>
+        @*<label asp-for="UserName">Username:</label>
         <input asp-for="UserName" type="string" ><br /><br />
 
         <label asp-for="Password">Password: </label>
-        <input asp-for="Password" type="password" ><br /><br />
+        <input asp-for="Password" type="password" ><br /><br />*@
 
         <button type="submit" style="width: 150px;">Sign In</button>
     </form>
