--- a/Views/Home/AddProduct.cshtml
+++ b/Views/Home/AddProduct.cshtml
@@ -1,4 +1,8 @@
-﻿@model Product
+﻿@{
+    Layout = "_AdminLayout";
+}
+
+@model Product
 <h1 style="text-align:center">Add a new product to the list!</h1><br /><br />
 
 
