--- a/Views/Home/AdminProducts.cshtml
+++ b/Views/Home/AdminProducts.cshtml
@@ -1,4 +1,8 @@
-﻿<h1 class="text-center">Table of All Products</h1>
+﻿@{
+    Layout = "_AdminLayout";
+}
+
+<h1 class="text-center">Table of All Products</h1>
 
 <div style="text-align:right">
     <form asp-controller="Home" asp-action="AdminAddProduct" method="post">
