--- a/Views/Home/AdminHomepage.cshtml
+++ b/Views/Home/AdminHomepage.cshtml
@@ -1,4 +1,8 @@
-﻿<h1 class="text-center">Admin Homepage</h1>
+﻿@{
+    Layout = "_AdminLayout";
+}
+
+<h1 class="text-center">Admin Homepage</h1>
 
 <div class="container">
     <div class="row">
