--- a/Views/Home/AdminOrders.cshtml
+++ b/Views/Home/AdminOrders.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>List of Orders that have been placed</h1>
+﻿@{
+    Layout = "_AdminLayout";
+}
+
+<h1>List of Orders that have been placed</h1>
 
 <table class="table table-bordered table-striped">
 
