--- a/Views/Home/EditProduct.cshtml
+++ b/Views/Home/EditProduct.cshtml
@@ -1,7 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "_AdminLayout";
 }
 @model Product
 <h1 style="text-align:center">Edit Product</h1>
