--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿<h1>INTEX II</h1>
-
+﻿
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,7 @@
 <body style="font-family: Arial, sans-serif; background-color: #f8f8f8; color: #333; margin: 0; padding: 0;">
 
     <header style="color: #4CAF50; padding: 20px; text-align: center;">
-        <h1>Welcome to Aurora Brickwell's Lego Store</h1>
+        <h1>Aurora's Bricks, Aurora Brickwell's Lego Store</h1>
     </header>
 
     <div style="text-align: center;">
