--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -10,7 +10,24 @@
     }
 </div>
 
-<div page-model="@Model.PaginationInfo" page-action="Products"
-      page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
-      class="btn-group pull-right m-1">
+<div class="row">
+    <div class="col">
+        <div page-model="@Model.PaginationInfo" page-action="Products"
+             page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
+             class="btn-group pull-right m-1">
+        </div>
+    </div>
+    <div class="col">
+        <form class="float-end" id="psForm" asp-controller="Home" asp-action="Products" method="get">
+            <label for="pageSize">Number of records per page</label>
+            <select name='pageSize' id='pageSize' onchange="document.getElementById('psForm').submit();">
+                <!option value="six" @(ViewContext.HttpContext.Session.GetInt32("pageSize") == 6 ? "selected" : "")>6</!option>
+                <!option value="ten" @(ViewContext.HttpContext.Session.GetInt32("pageSize") == 10 ? "selected" : "")>10</!option>
+                <!option value="twenty" @(ViewContext.HttpContext.Session.GetInt32("pageSize") == 20 ? "selected" : "")>20</!option>
+            </select>
+        </form>
+    </div>
+
+
 </div>
+
