--- a/Views/Home/AdminHomepage.cshtml
+++ b/Views/Home/AdminHomepage.cshtml
@@ -10,7 +10,13 @@
                         <img src="~/img/orders.png" class="img-fluid" style="width: 350px; height: 250px;" />
                     </div>
                     <p class="card-text">Click the button below to view orders.</p>
-                    <a asp-controller="Home" asp-action="AdminOrders" class="btn btn-primary mx-auto d-block">View Orders</a>
+                    <a asp-controller="Home" asp-action="AdminOrders"
+                       class="btn btn-primary mx-auto d-block"
+                       style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
+                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
+                              border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 24px;">
+                        View Orders
+                    </a>
                 </div>
             </div>
         </div>
@@ -22,7 +28,13 @@
                         <img src="~/img/customer.png" class="img-fluid" style="width: 350px; height: 250px;" />
                     </div>
                     <p class="card-text">Click the button below to view customers.</p>
-                    <a asp-controller="Home" asp-action="AdminCustomers" class="btn btn-primary mx-auto d-block">View Customers</a>
+                    <a asp-controller="Home" asp-action="AdminCustomers"
+                       class="btn btn-primary mx-auto d-block"
+                       style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
+                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
+                              border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 24px;">
+                        View Customers
+                    </a>
                 </div>
             </div>
         </div>
@@ -31,10 +43,16 @@
                 <div class="card-body">
                     <h5 class="card-title">View Products</h5>
                     <div style="text-align:center;">
-                        <img src="~/img/lego.png"  class="img-fluid" style="width: 350px; height: 250px;" />
+                        <img src="~/img/lego.png" class="img-fluid" style="width: 350px; height: 250px;" />
                     </div>
                     <p class="card-text">Click the button below to view products.</p>
-                    <a asp-controller="Home" asp-action="AdminProducts" class="btn btn-primary mx-auto d-block">View Products</a>
+                    <a asp-controller="Home" asp-action="AdminProducts"
+                       class="btn btn-primary mx-auto d-block"
+                       style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
+                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
+                              border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 24px;">
+                        View Products
+                    </a>
                 </div>
             </div>
         </div>
