--- a/Views/Home/SingleProduct.cshtml
+++ b/Views/Home/SingleProduct.cshtml
@@ -16,12 +16,25 @@
             <li>@Model.Description</li>
         </ul>
         <div>
-            <a class="btn btn-primary" href="@ViewBag.returnUrl">Continue Shopping</a>
+            <a class="btn btn-primary"
+               href="@ViewBag.returnUrl"
+               style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+               color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2; border-color: #92b6f0;
+               font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+               Continue Shopping
+            </a>
         </div>
+
         <form id="@Model.ProductId" method="post" asp-page="/Cart">
             <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
             <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
-            <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
+            <button type="submit" class="btn-outline-success btn-sm float-end"
+                    style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px;
+                    padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
+                    border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                Add to Cart
+            </button>
         </form>
+
     </div>
 </div>
