--- a/Views/Home/AdminCustomers.cshtml
+++ b/Views/Home/AdminCustomers.cshtml
@@ -1,21 +1,19 @@
-﻿
-
-<h1>Admin Table for Customers</h1>
+﻿<h1>Admin Table for Customers</h1>
 
 <table class="table table-bordered table-striped">
 
     <thead class="thead-dark fw-bold">
         <tr>
-            <th style="text-align:center" class="bg-black text-white">CustomerId</th>
-            <th style="text-align:center" class="bg-black text-white">FirstName</th>
-            <th style="text-align:center" class="bg-black text-white">LastName</th>
-            <th style="text-align:center" class="bg-black text-white">BirthDate</th>
-            <th style="text-align:center" class="bg-black text-white">Country</th>
-            <th style="text-align:center" class="bg-black text-white">Gender</th>
-            <th style="text-align:center" class="bg-black text-white">Age</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">CustomerId</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">FirstName</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">LastName</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">BirthDate</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Country</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Gender</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Age</th>
 
-            <th style="text-align:center" class="bg-black text-white">Edit</th>
-            <th style="text-align:center" class="bg-black text-white">Delete</th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white"></th>
+            <th style="text-align:center; background-color: #92b6f0;" class="text-white"></th>
         </tr>
     </thead>
 
@@ -31,8 +29,25 @@
                 <td style="text-align:center">@x.Gender</td>
                 <td style="text-align:center">@x.Age</td>
 
-                <td><a class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.CustomerId">Edit</a></td>
-                <td><a class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.CustomerId">Delete</a></td>
+                <td style="text-align:center">
+                    <a class="btn btn-info"
+                       asp-controller="Home" asp-action="EditCustomer" asp-route-id="@x.CustomerId"
+                       style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                       color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2; border-color: #92b6f0;
+                       font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                        Edit
+                    </a>
+                </td>
+                <td style="text-align:center">
+                    <a class="btn btn-danger"
+                       asp-controller="Home" asp-action="DeleteCustomer" asp-route-id="@x.CustomerId"
+                       style="display: inline-flex; justify-content: center;align-items: center;outline: 0;cursor: pointer;height: 34px;padding: 0 13px;
+                       color: #fff;border-radius: 3px;border: 1px solid transparent;transition: all .3s ease;background:	#b2cbf2;border-color:#92b6f0;
+                       font-weight: 600;text-transform: uppercase;line-height: 16px;font-size: 14px;">
+                        Delete
+                    </a>
+                </td>
+
             </tr>
         }
     </tbody>
