--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -13,38 +13,30 @@
             <img src="@Model.ImgLink" class="bd-placeholder-img card-img-top" style="max-width: auto; height: 500px;">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
-                        <form asp-controller="Home" asp-action="SingleProduct" asp-route-returnUrl="@ViewContext.HttpContext.Request.PathAndQuery()" method="post">
-                            <button type="submit" name="id" value="@Model.ProductId" style="width: 150px;">See More Info</button>
-                        </form><br /><br />
-                        <form id="@Model.ProductId" method="post" asp-page="/Cart">
-                            <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
-                            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
-                            <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
-                        </form>
+                    <form asp-controller="Home" asp-action="SingleProduct" asp-route-returnUrl="@ViewContext.HttpContext.Request.PathAndQuery()" method="post">
+                        <button type="submit" name="id" value="@Model.ProductId"
+                                style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; width: 150px;
+                                padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
+                                border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                                See More Info
+                        </button>
+                    </form>
+                    <br /><br />
+                    <form id="@Model.ProductId" method="post" asp-page="/Cart">
+                        <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
+                        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+                        <button type="submit" class="btn-outline-success btn-sm float-end"
+                                style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px;
+                                padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
+                                border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                            Add to Cart
+                        </button>
+                    </form>
+
                 </div>
             </div>
         </div>
     </div>
-
-
-    @* <div class="col-md-6">
-        <h4>
-            @Model.Name
-            <span class="badge rounded-pill bg-primary text-white float-end"><small>$@Model.Price</small></span>
-        </h4>
-        <a href="@Model.ImgLink">
-            <img src="@Model.ImgLink" style="max-width: 400px; height: auto;">
-        </a><br />
-        <form asp-controller="Home" asp-action="SingleProduct" asp-route-returnUrl="@ViewContext.HttpContext.Request.PathAndQuery()" method="post">
-            <button type="submit" name="id" value="@Model.ProductId" style="width: 150px;">See More Info</button>
-        </form>
-
-        <form id="@Model.ProductId" method="post" asp-page="/Cart">
-            <input type="hidden" asp-for="ProductId" value="@Model.ProductId" />
-            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
-            <button type="submit" class="btn-outline-success btn-sm float-end">Add to cart</button>
-        </form>
-    </div> *@
 
 </div>
 
